[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://assets/sound_jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/osb_left.png" type="Texture" id=5]
[ext_resource path="res://assets/osb_right.png" type="Texture" id=6]
[ext_resource path="res://assets/osb_jump.png" type="Texture" id=7]
[ext_resource path="res://assets/osb_fire.png" type="Texture" id=8]
[ext_resource path="res://characters/player/weapon.gd" type="Script" id=9]
[ext_resource path="res://inventory/Inventory.tscn" type="PackedScene" id=10]
[ext_resource path="res://inventory/items/Food.tscn" type="PackedScene" id=11]
[ext_resource path="res://shop/Purse.tscn" type="PackedScene" id=12]
[ext_resource path="res://characters/Health.tscn" type="PackedScene" id=13]

[sub_resource type="Animation" id=1]
resource_name = "crouch"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=2]
resource_name = "falling"
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=3]
resource_name = "falling_weapon"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=4]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=8]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 0 ]
}

[sub_resource type="Animation" id=9]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 5 ]
}

[sub_resource type="Animation" id=10]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=11]
height = 44.4787

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 13, 20 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
editor/display_folded = true
modulate = Color( 0.412109, 0.611725, 0.824219, 1 )
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 22

[node name="smoke" type="Node2D" parent="sprite"]
position = Vector2( 20.7312, 3.21187 )
rotation = -1.45648

[node name="bullet_shoot" type="Position2D" parent="sprite"]
position = Vector2( 30.6589, 6.13176 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 1 )
anims/falling = SubResource( 2 )
anims/falling_weapon = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/idle_weapon = SubResource( 5 )
anims/jumping = SubResource( 6 )
anims/jumping_weapon = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_weapon = SubResource( 9 )
anims/standing_weapon_ready = SubResource( 10 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )
limit_left = 0
limit_top = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.291992, -0.835023 )
shape = SubResource( 11 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" groups=[
"player",
]]
position = Vector2( -7, 9 )
shape = SubResource( 12 )

[node name="sound_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="ui" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 0

[node name="left" type="TouchScreenButton" parent="ui"]
position = Vector2( 39.4474, 598.528 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ui"]
position = Vector2( 133.23, 599.073 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="ui"]
position = Vector2( 1151.28, 596.678 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 7 )
action = "jump"
visibility_mode = 1

[node name="fire" type="TouchScreenButton" parent="ui"]
position = Vector2( 1153.13, 500.446 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 8 )
action = "shoot"
visibility_mode = 1

[node name="weapon" type="Node" parent="."]
script = ExtResource( 9 )
weapon_type = "not null"

[node name="Inventory" parent="." instance=ExtResource( 10 )]

[node name="Food" parent="Inventory" instance=ExtResource( 11 )]
amount = 10

[node name="Purse" parent="." instance=ExtResource( 12 )]

[node name="Health" parent="." instance=ExtResource( 13 )]
max_health = 100

[node name="Tween" type="Tween" parent="."]

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MusicRegen" type="Timer" parent="."]
wait_time = 0.25

[connection signal="health_changed" from="Health" to="." method="_on_Health_health_changed"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="MusicRegen" to="." method="_on_MusicRegen_timeout"]
